--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "cart-shop",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 7070",
     "build": "vite build",
     "preview": "vite preview --port 4173",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "vue": "^3.2.37",
+    "pinia": "^2.1.6",
     "vue-router": "^4.1.5",
+    "vue-axios": "^3.4.1",
+    "axios": "^0.25.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
